welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: value := is not a member of plm.universe.Direction
	if(getDirection() := Direction.WEST && 
                          ^